<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@drawable/gradient">


    <TextView
        android:id="@+id/requestUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/Username"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccount" />

    <TextView
        android:id="@+id/requestUsername2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="108dp"
        android:onClick="CreateAcc"
        android:text="@string/CreateAcc"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="317dp"
        android:layout_height="51dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="167dp"
        android:text="@string/Login"
        android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RequestPassword"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestUsername" />

    <EditText
        android:id="@+id/getUsername"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="121dp"
        android:ems="10"
        android:hint="Maximum of 8 characters"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/RequestPassword"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccount" />

    <EditText
        android:id="@+id/getPassword"
        android:layout_width="202dp"
        android:layout_height="43dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="121dp"
        android:ems="10"
        android:hint="Maximum of 6 characters"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/RequestPassword"
        app:layout_constraintTop_toBottomOf="@+id/getUsername" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="372dp"
        android:onClick="Login"
        android:text="@string/LoginButton"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/LoginButton" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="93dp"
        android:layout_height="235dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/mystic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="235dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/valor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="93dp"
        android:layout_height="235dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/instinct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/LoginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="10dp"
        android:text="Please Log in"
        app:layout_constraintBottom_toTopOf="@+id/getUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccount" />

</android.support.constraint.ConstraintLayout>